@@ -1,3 +1,8 @@
+2001-12-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* smtpd.tcl (smtpd::gmtoffset): Fixed for cases where the hour
+	offset is invalid.
+
 2001-11-19  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* Moved example.tcl to the standard location in
